--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "react-dom": "17.0.1",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.3.0"
+  },
+  "devDependencies": {
+    "@iconify-icons/ic": "^1.1.11",
+    "@iconify/react": "^3.0.1"
   }
 }
