--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-modal": "^3.12.1",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@iconify-icons/ic": "^1.1.11",
